finished rag chain and added functions to helper.py

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -23,12 +23,441 @@
    "execution_count": null,
    "id": "58a68878",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\nakul\\\\medico\\\\research'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3e0a1207",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_data(data):\n",
-    "    \n",
-    "    return "
+    "import os\n",
+    "os.chdir(\"../\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "830f4eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pypdf import PdfReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3412d2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = PdfReader('data/Medical_book.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "08400572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "637\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(reader.pages))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3513a2c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "page = reader.pages[0]\n",
+    "print(page.extract_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5281e28a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nakul\\anaconda3\\envs\\medico\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e2fd1010",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data,\n",
+    "                    glob=\"*.pdf\",\n",
+    "                    loader_cls=PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    return documents\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3cc1c3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "docs = load_pdf('data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e4935195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_splitter(docs):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(\n",
+    "        chunk_size=500, \n",
+    "        chunk_overlap=20)\n",
+    "    text_chunks = text_splitter.split_documents(docs)\n",
+    "    return text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c6fec3f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_chunk = text_splitter(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "084629c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.embeddings import HuggingFaceEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2824e28e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nakul\\AppData\\Local\\Temp\\ipykernel_24540\\2703632793.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(\n"
+     ]
+    }
+   ],
+   "source": [
+    "def download_embedding():\n",
+    "      model_name = \"sentence-transformers/all-MiniLM-l6-v2\"\n",
+    "      embeddings = HuggingFaceEmbeddings(\n",
+    "            model_name= model_name)\n",
+    "      return embeddings\n",
+    "\n",
+    "embeddings = download_embedding()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f87ee098",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8a948d11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = os.getenv(\"PINECONE_API_KEY\")\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "os.environ[\"PINECONE_API_KEY\"] = PINECONE_API_KEY\n",
+    "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0e4964be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pinecone import Pinecone\n",
+    "pinecone_api_key = PINECONE_API_KEY\n",
+    "pc = Pinecone(api_key = pinecone_api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8e9b7532",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pinecone.pinecone.Pinecone at 0x2195d4a6c20>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "96c2217c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pinecone import ServerlessSpec\n",
+    "\n",
+    "index_name = 'medico'\n",
+    "\n",
+    "if not pc.has_index(index_name):\n",
+    "    pc.create_index(\n",
+    "        name = index_name,\n",
+    "        dimension = 384,\n",
+    "        metric= 'cosine',\n",
+    "        spec = ServerlessSpec(cloud = 'aws', region = 'us-east-1')\n",
+    "    )\n",
+    "index = pc.Index(index_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e31d623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "\n",
+    "docsearch = PineconeVectorStore.from_documents(\n",
+    "    documents = text_chunk,\n",
+    "    embedding = embeddings,\n",
+    "    index_name = index_name\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "67b28c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docsearch = PineconeVectorStore.from_existing_index(\n",
+    "    index_name=index_name,\n",
+    "    embedding=embeddings\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "078f0892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriver = docsearch.as_retriever(search_type= \"similarity\", search_kwargs = {\"k\" : 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1dc4f141",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(id='e44caf4b-9bfc-4426-9329-cb323324fd3c', metadata={'creationdate': '2004-12-18T17:00:02-05:00', 'creator': 'PyPDF', 'moddate': '2004-12-18T16:15:31-06:00', 'page': 39.0, 'page_label': '40', 'producer': 'PDFlib+PDI 5.0.0 (SunOS)', 'source': 'data\\\\Medical_book.pdf', 'total_pages': 637.0}, page_content='GALE ENCYCLOPEDIA OF MEDICINE 226\\nAcne\\nGEM - 0001 to 0432 - A  10/22/03 1:41 PM  Page 26'),\n",
+       " Document(id='ca715c4e-20d0-4b5b-8c9d-9e2a823f8b3c', metadata={'creationdate': '2004-12-18T17:00:02-05:00', 'creator': 'PyPDF', 'moddate': '2004-12-18T16:15:31-06:00', 'page': 38.0, 'page_label': '39', 'producer': 'PDFlib+PDI 5.0.0 (SunOS)', 'source': 'data\\\\Medical_book.pdf', 'total_pages': 637.0}, page_content='GALE ENCYCLOPEDIA OF MEDICINE 2 25\\nAcne\\nAcne vulgaris affecting a woman’s face. Acne is the general\\nname given to a skin disorder in which the sebaceous\\nglands become inflamed. (Photograph by Biophoto Associ-\\nates, Photo Researchers, Inc. Reproduced by permission.)\\nGEM - 0001 to 0432 - A  10/22/03 1:41 PM  Page 25'),\n",
+       " Document(id='31537867-4523-42a1-aec3-933927b90882', metadata={'creationdate': '2004-12-18T17:00:02-05:00', 'creator': 'PyPDF', 'moddate': '2004-12-18T16:15:31-06:00', 'page': 37.0, 'page_label': '38', 'producer': 'PDFlib+PDI 5.0.0 (SunOS)', 'source': 'data\\\\Medical_book.pdf', 'total_pages': 637.0}, page_content='Acidosis see Respiratory acidosis; Renal\\ntubular acidosis; Metabolic acidosis\\nAcne\\nDefinition\\nAcne is a common skin disease characterized by\\npimples on the face, chest, and back. It occurs when the\\npores of the skin become clogged with oil, dead skin\\ncells, and bacteria.\\nDescription\\nAcne vulgaris, the medical term for common acne, is\\nthe most common skin disease. It affects nearly 17 million\\npeople in the United States. While acne can arise at any')]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retrived = retriver.invoke(\"what is acne?\")\n",
+    "retrived"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "acba1614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c2d1659d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chatModel = ChatOpenAI(\n",
+    "    model = \"gpt-4o\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c24cb2c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "\n",
+    "system_prompt = (\n",
+    "    \"You are an Medical assistant for question-answering tasks. \"\n",
+    "    \"Use the following pieces of retrieved context to answer \"\n",
+    "    \"the question. If you don't know the answer, say that you \"\n",
+    "    \"don't know. Use three sentences maximum and keep the \"\n",
+    "    \"answer concise.\"\n",
+    "    \"\\n\\n\"\n",
+    "    \"{context}\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", system_prompt),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ddaa1984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question_answer_chain = create_stuff_documents_chain(chatModel, prompt)\n",
+    "rag_chain = create_retrieval_chain(retriver, question_answer_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2089f3bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acromegaly is a disorder characterized by abnormal release of a growth hormone from the pituitary gland, leading to increased growth in bone and soft tissue and various body disturbances. It occurs when the abnormality arises after bone growth has stopped. Gigantism, in contrast, happens when this abnormal growth occurs before bone growth stops, leading to unusual height.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = rag_chain.invoke({\"input\": \"what is Acromegaly and gigantism?\"})\n",
+    "print(response[\"answer\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d983ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
